--- a/index.html
+++ b/index.html
@@ -91,19 +91,21 @@
 
 <!-- 결과 테이블 -->
 <table class="tbl">
-  <thead>
-    <tr>
-      <th>코인명</th>
-      <th>현재가 (KRW)</th>
-      <th>변동률</th>
-      <th>매수</th>
-      <th>매도</th>
-      <th>손절</th>
-      <th>예열시작시간</th>
-      <th>예열종시간</th>
-    </tr>
-  </thead>
-  <tbody id="result-body"></tbody>
+<thead>
+  <tr>
+    <th>코인명</th>
+    <th>현재가 (KRW)</th>
+    <th>변동률</th>
+    <th>매수</th>
+    <th>매도</th>
+    <th>손절</th>
+    <th>위험도</th>
+    <th>예열시작시간</th>
+    <th>예열종료시간</th>
+  </tr>
+</thead>
+<tbody id="result-body"></tbody>
+ 
 </table>
 
 <!-- 아래 한 줄로 js 연결만 확인 -->
