--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <th>매도</th>
     <th>손절</th>
     <th>위험도</th>
-    <th>예열시작시간</th>
-    <th>예열종료시간</th>
+    <th>예열시작</th>
+    <th>예열종료</th>
   </tr>
 </thead>
 <tbody id="result-body"></tbody>
