--- a/index.html
+++ b/index.html
@@ -89,24 +89,32 @@
   <span id="search-count" style="opacity:.7; margin-left:8px;"></span>
 </div>
 
+<!-- 검색창 바로 아래에 넣기 -->
+<div id="search-status" style="margin:6px 0 12px;color:#a0f5c5;font-size:14px;">
+  검색 대기 중...
+</div>
+
 <!-- 결과 테이블 -->
 <table class="tbl">
-<thead>
-  <tr>
-    <th>코인명</th>
-    <th>현재가 (KRW)</th>
-    <th>변동률</th>
-    <th>매수</th>
-    <th>매도</th>
-    <th>손절</th>
-    <th>위험도</th>
-    <th>예열시작</th>
-    <th>예열종료</th>
-  </tr>
-</thead>
-<tbody id="result-body"></tbody>
- 
+  <thead>
+    <tr>
+      <th>코인명</th>
+      <th>현재가 (KRW)</th>
+      <th>변동률</th>
+      <th>매수</th>
+      <th>매도</th>
+      <th>손절</th>
+      <th>위험도</th>          <!-- ✅ 새로 추가 -->
+      <th>예열시작시간</th>
+      <th>예열종료시간</th>
+    </tr>
+  </thead>
+  <tbody id="result-body"></tbody>
 </table>
+
+<!-- js 연결 -->
+<script defer src="/js/app.js"></script>
+
 
 <!-- 아래 한 줄로 js 연결만 확인 -->
 <script defer src="/js/app.js"></script>
