--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <input id="search-input" placeholder="코인명/심볼 (예: 비트, BTC, KRW-BTC)" />
       <button id="search-btn">검색</button>
     </div>
+    <div id="search-status" style="margin:6px 0 12px;color:#a0f5c5;font-size:14px;">
+  검색 대기 중...
+</div>
+
     <div id="search-status">검색 대기 중...</div>
   </header>
 <!-- 검색 입력 -->
@@ -129,7 +133,6 @@
           <th>거래대금(24h)</th>
         </tr>
       </thead>
-      <tbody id="result-body"></tbody>
     </table>
   </main>
 
